import Foundation
import WatchKit

public enum HapticType: String, Equatable, CaseIterable, Identifiable {
    case standard = "Standard"
    case strong = "Strong"
    case weak = "Weak"

    public var id: String { rawValue }

    public var wkHapticType: WKHapticType {
...
